Bug 372064 - Panel is no longer auto-hidden and centered after changing display resolution
Summary: Panel is no longer auto-hidden and centered after changing display resolution
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 5.8.2
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-04 10:33 UTC by opensuse.lietuviu.kalba
Modified: 2017-01-11 19:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
video.webm (3.38 MB, video/webm)
2016-11-04 10:33 UTC, opensuse.lietuviu.kalba
Details
KDE4 wordked fine (2.71 MB, video/webm)
2016-11-08 05:28 UTC, opensuse.lietuviu.kalba
Details

Note You need to log in before you can comment on or make changes to this bug.
Description opensuse.lietuviu.kalba 2016-11-04 10:33:32 UTC
Created attachment 102026 [details]
video.webm

I created new panel with icons in KDE Plasma 5.8.2 with KF26.
I configured it to be auto-hidden and centered.
But settings will not survive changing display resolution.

Panel must keep auto-hide and centering settings accross display resolutions

See video.
Comment 1 opensuse.lietuviu.kalba 2016-11-04 11:03:58 UTC
And this is especially annoying in VirtualBox while resizing VirtualBox guest windows results in changed display resolution and thus again and again loosing auto-hidden and centered look of panel
Comment 2 Marco Martin 2016-11-07 15:16:03 UTC
complete panels settings, are saved separatedly per screen resolution, because settings of position and size would go lost otherwise when switching to screens of different sizes
Comment 3 opensuse.lietuviu.kalba 2016-11-07 16:08:06 UTC
Can we please have option to enforce keep at least two options (alignment and hiding) to be persistent across resolutions?
Comment 4 opensuse.lietuviu.kalba 2016-11-08 05:28:22 UTC
Created attachment 102116 [details]
KDE4 wordked fine
Comment 5 Marco Martin 2017-01-11 19:46:52 UTC
Git commit 8d58eefc5580133fe81e065e26975fa6c337ad93 by Marco Martin.
Committed on 11/01/2017 at 19:46.
Pushed by mart into branch 'master'.

panel alignment/visibility not resolution dependent

Summary:
panel size and position in pixel is dependent from screen resolution,
this saved in different config groups, as it should.
but two properies of panelview shouldn't change between resolution,
that are visibility and alignment, otherwise the panel changes
behavior in an unpredictable way when resolution changes.

Test Plan:
started plasmashell with old config, values have been correctly
migrated to the parent group that's common for all resolutions

Reviewers: davidedmundson, #plasma

Reviewed By: davidedmundson, #plasma

Subscribers: davidedmundson, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4087

M  +13   -5    shell/panelview.cpp

https://commits.kde.org/plasma-workspace/8d58eefc5580133fe81e065e26975fa6c337ad93
Comment 6 opensuse.lietuviu.kalba 2017-01-11 19:49:54 UTC
Thanks, can you please backport in KDE Plasma 5.8 LTS branch also?